Prueba, para añadir una nueva interfaz que no requiera de expandable list, sino de linear layouts que se hacen visibles e invisibles.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,13 +13,27 @@
         android:text="RECETAS"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/btnEditarReceta"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Guardar en JSON"
-        android:onClick="btnClick"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/btnEditarReceta"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="btnClick"
+            android:text="Guardar en JSON" />
+
+        <Button
+            android:id="@+id/button1"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="toPrueba"
+            android:onClick="toPrueba"/>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/lvListaRecetas"
