Prueba finalizada, funciona correctamente. Próximos pasos:   -Cambiar la id generada para los EditText.   -Recoger el focus correctamente.

--- a/res/layout/receta_item_rowlayout_prueba.xml
+++ b/res/layout/receta_item_rowlayout_prueba.xml
@@ -13,6 +13,7 @@
         android:background="@null"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="1.- Añade el arroz, el agua y un chorrito de aceite (en ese orden) en una pequeña cazuela y ponla a fuego medio." 
+        android:saveEnabled="false"
         />
 
     <Button
