--- a/res/layout/activity_edit_receta3.xml
+++ b/res/layout/activity_edit_receta3.xml
@@ -17,14 +17,6 @@
         android:text="nombre"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/button3"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="clickbtn"
-        android:text="Button" />
-
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
@@ -34,56 +26,89 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-
+            
+			<LinearLayout
+			    	android:id="@+id/headerIng"
+					android:layout_width="match_parent" 
+					android:layout_height="wrap_content"
+					android:gravity="center_horizontal|center_vertical"
+					android:orientation="horizontal">
+			
+			    <ImageView
+			        android:id="@+id/imageView1"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginLeft="5dp"
+			        android:src="@drawable/ic_list_parent" />
+			
+				<TextView 
+			        android:id="@+id/tvCategoria" 
+			        android:layout_width="0dp"
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:textSize="20sp"
+			        android:padding="5dp"
+			        android:text="@string/ingredientes"/>
+			
+				<Button
+				    android:id="@+id/btnAdd1"
+				    style="?android:attr/buttonStyleSmall"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:background="@android:drawable/ic_menu_add"
+				    android:focusable="false"/>
+			    
+			</LinearLayout>
+			
             <LinearLayout
-                android:id="@+id/ll1"
+                android:id="@+id/llListaIng"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" 
                 android:visibility="visible">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView1" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView1" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView1" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView1" />
-                
 
             </LinearLayout>
-
+            
+			<LinearLayout
+			    android:id="@+id/headerPasos"
+				android:layout_width="match_parent" 
+				android:layout_height="wrap_content"
+				android:gravity="center_horizontal|center_vertical"
+				android:orientation="horizontal">
+			
+			    <ImageView
+			        android:id="@+id/imageView2"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginLeft="5dp"
+			        android:src="@drawable/ic_list_parent" />
+			
+				<TextView 
+			        android:id="@+id/tvCategoria" 
+			        android:layout_width="0dp"
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:textSize="20sp"
+			        android:padding="5dp"
+			        android:text="@string/pasos"/>
+			
+				<Button
+				    android:id="@+id/btnAdd2"
+				    style="?android:attr/buttonStyleSmall"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:background="@android:drawable/ic_menu_add"
+				    android:focusable="false"/>
+			    
+			</LinearLayout>
+			
+			
             <LinearLayout
-                android:id="@+id/ll2"
+                android:id="@+id/llListaPasos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" 
                 android:visibility="visible">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView2" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView2" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView2" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView2" />
             </LinearLayout>
 
         </LinearLayout>
